--- a/css/student_page.css
+++ b/css/student_page.css
@@ -1,6 +1,6 @@
 section{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-wrap: wrap;
   text-align: center;
 }
