--- a/css/student_page.css
+++ b/css/student_page.css
@@ -16,11 +16,22 @@ table, td {
 table{
   border-collapse: collapse;
 }
+.name_box{
+  display: flex;
+  justify-content: flex-start;
+}
 #thumb_nail{
-  max-width: 100px;
-  max-height: 100px;
-  width: 50%;
+  max-width: 30%;
+  max-height: 50px;
+  height: auto;
   border-radius: 50%;
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 10%;
+  }
+  .name_and_major p{
+    margin-left: 0;
+    text-align: left;
   }
 .content_box{
   display: flex;
