--- a/css/teacher_page.css
+++ b/css/teacher_page.css
@@ -4,33 +4,40 @@ section{
   flex-wrap: wrap;
 }
 .student_info{
-  background-color: #DEE3E0;
-  margin-top: 30px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-bottom: 20px;
+  flex-basis: 33%;
 }
 table, td {
    border: 1px solid black;
 }
 table{
   border-collapse: collapse;
+  background-color: #DEE3E0;
 }
 .name_box{
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
 #thumb_nail{
-  max-width: 100px;
-  max-height: 100px;
-  width: 50%;
+  max-width: 30%;
+  max-height: 50px;
+  height: auto;
   border-radius: 50%;
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 10%;
   }
+.content_box{
+  display: flex;
+  margin-top: 20px;
+  justify-content: center;
+}
 .name_and_major{
-  width: 70%;
-  text-align: center;
+  text-align: left;
 }
 .course_title, .course, .rating, .gpa{
   margin-top: 10px;
   height: 40px;
   text-align: center;
 }
+@media screen and (max-width: 500px){
